tests/ui/missing_value.stderr
error: unexpected end of macro invocation
  --> $DIR/missing_value.rs:13:5
   |
13 |     json!({ "a" : });
   |     ^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate

